--- a/0.6
+++ b/0.6
@@ -1,3 +1,7 @@
+sequenceDiagram
+    participant browser
+    participant server
+
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     activate server
     server-->>browser: [{"content":"single page app","date": "2023-11-27T14:55:04.384Z"}, ... ]
