--- a/0.5
+++ b/0.5
@@ -20,4 +20,4 @@ sequenceDiagram
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
     server-->>browser: [{content: "bii", date: "2023-11-27T10:53:00.973Z"}, ... ]
-    deactivate serve
+    deactivate server
